test: add unit tests

--- a/test/web/src/index.html
+++ b/test/web/src/index.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta charset="UTF-8" />
+    <title>Project Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <main>
-      <h1>GSS test app</h1>
-    </main>
-    <script src="./index.js"></script>
+    <noscript>JavaScript is needed to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
